--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
   
   <script src="HTMLDynamicList.js"></script>
 
-  <script src="Test.js.js"></script>
+  <script src="Test.js"></script>
   
     
 </body>
